tests/ui/untrusted_pairs.stderr
error[E0277]: `&str` is not an iterator
 --> tests/ui/untrusted_pairs.rs:4:47
  |
4 |     let trusted = RangeSetInt::<u8>::try_from("1..=2,3..=4,5..=6").unwrap();
  |                   --------------------------- ^^^^^^^^^^^^^^^^^^^ `&str` is not an iterator; try calling `.chars()` or `.bytes()`
  |                   |
  |                   required by a bound introduced by this call
  |
  = help: the trait `Iterator` is not implemented for `&str`
  = note: required for `RangeSetInt<u8>` to implement `From<&str>`
  = note: required for `&str` to implement `Into<RangeSetInt<u8>>`
  = note: required for `RangeSetInt<u8>` to implement `TryFrom<&str>`

error[E0277]: the trait bound `&str: SortedDisjoint` is not satisfied
 --> tests/ui/untrusted_pairs.rs:4:47
  |
4 |     let trusted = RangeSetInt::<u8>::try_from("1..=2,3..=4,5..=6").unwrap();
  |                   --------------------------- ^^^^^^^^^^^^^^^^^^^ the trait `SortedDisjoint` is not implemented for `&str`
  |                   |
  |                   required by a bound introduced by this call
  |
  = help: the following other types implement trait `SortedDisjoint`:
            BitOrIter<T, I>
            DynSortedDisjoint<'a, T>
            NotIter<T, I>
            Ranges<'_, T>
            itertools::tee::Tee<I>
            range_set_int::unsorted_disjoint::SortedDisjointWithLenSoFar<T, I>
  = note: required for `RangeSetInt<u8>` to implement `From<&str>`
  = note: required for `&str` to implement `Into<RangeSetInt<u8>>`
  = note: required for `RangeSetInt<u8>` to implement `TryFrom<&str>`

error[E0271]: expected `std::slice::Iter<'_, ({integer}, {integer})>` to be an iterator that yields `RangeInclusive<_>`, but it yields `&({integer}, {integer})`
 --> tests/ui/untrusted_pairs.rs:8:41
  |
8 |     let range_set_int: RangeSetInt<_> = untrusted.iter().into();
  |                                         ^^^^^^^^^^^^^^^^ ---- required by a bound introduced by this call
  |                                         |
  |                                         expected struct `RangeInclusive`, found reference
  |
  = note: expected struct `RangeInclusive<_>`
          found reference `&({integer}, {integer})`
  = note: required for `RangeSetInt<_>` to implement `From<std::slice::Iter<'_, ({integer}, {integer})>>`
  = note: required for `std::slice::Iter<'_, ({integer}, {integer})>` to implement `Into<RangeSetInt<_>>`

error[E0277]: the trait bound `std::slice::Iter<'_, ({integer}, {integer})>: SortedDisjoint` is not satisfied
 --> tests/ui/untrusted_pairs.rs:8:41
  |
8 |     let range_set_int: RangeSetInt<_> = untrusted.iter().into();
  |                                         ^^^^^^^^^^^^^^^^ ---- required by a bound introduced by this call
  |                                         |
  |                                         the trait `SortedDisjoint` is not implemented for `std::slice::Iter<'_, ({integer}, {integer})>`
  |
  = help: the following other types implement trait `SortedDisjoint`:
            BitOrIter<T, I>
            DynSortedDisjoint<'a, T>
            NotIter<T, I>
            Ranges<'_, T>
            itertools::tee::Tee<I>
            range_set_int::unsorted_disjoint::SortedDisjointWithLenSoFar<T, I>
  = note: required for `RangeSetInt<_>` to implement `From<std::slice::Iter<'_, ({integer}, {integer})>>`
  = note: required for `std::slice::Iter<'_, ({integer}, {integer})>` to implement `Into<RangeSetInt<_>>`

error[E0277]: `&str` is not an iterator
 --> tests/ui/untrusted_pairs.rs:4:19
  |
4 |     let trusted = RangeSetInt::<u8>::try_from("1..=2,3..=4,5..=6").unwrap();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ `&str` is not an iterator; try calling `.chars()` or `.bytes()`
  |
  = help: the trait `Iterator` is not implemented for `&str`
  = note: required for `RangeSetInt<u8>` to implement `From<&str>`
  = note: required for `&str` to implement `Into<RangeSetInt<u8>>`
  = note: required for `RangeSetInt<u8>` to implement `TryFrom<&str>`

error[E0277]: the trait bound `&str: SortedDisjoint` is not satisfied
 --> tests/ui/untrusted_pairs.rs:4:19
  |
4 |     let trusted = RangeSetInt::<u8>::try_from("1..=2,3..=4,5..=6").unwrap();
  |                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `SortedDisjoint` is not implemented for `&str`
  |
  = help: the following other types implement trait `SortedDisjoint`:
            BitOrIter<T, I>
            DynSortedDisjoint<'a, T>
            NotIter<T, I>
            Ranges<'_, T>
            itertools::tee::Tee<I>
            range_set_int::unsorted_disjoint::SortedDisjointWithLenSoFar<T, I>
  = note: required for `RangeSetInt<u8>` to implement `From<&str>`
  = note: required for `&str` to implement `Into<RangeSetInt<u8>>`
  = note: required for `RangeSetInt<u8>` to implement `TryFrom<&str>`
